--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
+    "emoji-picker-react": "^4.4.12",
     "formik": "^2.4.3",
     "js-cookie": "^3.0.5",
     "react": "^17.0.2",
